--- a/package.json
+++ b/package.json
@@ -2,15 +2,27 @@
   "private": true,
   "scripts": {
     "build": "fable build.fsx --run",
-    "pretest": "fable-splitter tests -o build --commonjs",
-    "test": "mocha build -t 10000"
+    "publish": "fable build.fsx --run publish",
+    "pretest": "fable-splitter test -o build --commonjs",
+    "test": "mocha build -w",
+    "test:watch": "npm-run-all --parallel watch:*",
+    "watch:pretest": "fable-splitter test -o build --commonjs -w",
+    "watch:test": "mocha build -w"
   },
-  "dependencies": {
+  "author": "Thiago Temple",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/thitemple/fable-remotedata/issues"
+  },
+  "homepage": "https://github.com/thitemple/fable-remotedata#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.4.4",
     "fable-compiler": "^2.3.6",
     "fable-compiler-js": "^1.0.3",
     "fable-publish-utils": "^1.0.5",
     "fable-splitter": "^2.1.8",
-    "isomorphic-fetch": "^2.2.1",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "npm-run-all": "^4.1.5"
   }
 }
